images align fix

--- a/src/containers/main/main.scss
+++ b/src/containers/main/main.scss
@@ -17,12 +17,10 @@
 	}
 	.banner {
 		&__title {
-			width: 500px;
+			width: 550px;
 			display: flex;
 			justify-content: start;
 			flex-direction: column;
-			// position: absolute;
-			// z-index: 999;
 			gap: 1rem;
 			p {
 				color: rgb(118, 118, 118);
@@ -30,9 +28,9 @@
 			}
 		}
 		&__image {
-			width: 350px;
+			width: 300px;
 			position: absolute;
-			right: 9%;
+			right: 1%;
 			bottom: -1%;
 			img {
 				width: 100%;
